# cross_stitch_solver

./: Cargo.toml  README.md
src/: affixed_permutations.rs  closest_n_permutation.rs  csv_reader.rs  csv_writer.rs  main.rs  stitch.rs  test_sequences.rs
stitch_sequences/: column_start_bottom_end_top.csv  column_start_end_bottom.csv  descending_steps_two_start_end_top.csv  left_inverted_teewee.csv  left_teewee.csv  row_kick_bottom_start_end_left.csv  row_kick_start_end_left.csv  row_start_end_left.csv  row_start_left_end_right.csv  two_column_start_end_bottom.csv  two_columns_start_end_top.csv
stitch_sequences/solved_sequences/: column_start_bottom_end_top.csv  column_start_end_bottom.csv  descending_steps_two_start_end_top.csv  descending_steps_two_start_top.csv  left_inverted_teewee.csv  left_teewee.csv  row_kick_bottom_start_end_left.csv  row_kick_start_end_left.csv  row_start_end_left.csv  row_start_left_end_right.csv
