[package]
name = "cross_stitch_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
csv = "1.3.0"
gif = "0.12.0"
image = "0.24.7"
imageproc = "0.23.0"
itertools = "0.11.0"
rayon = "1.8.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_test = "1.0.176"

